Editorial column alignment fix

--- a/mainsite/static/jpt/css/_content.scss
+++ b/mainsite/static/jpt/css/_content.scss
@@ -641,7 +641,7 @@
   padding:              0;
 }
 .editorialcol {
-  padding:              10px;
+  padding:              0 10px 10px 10px;
 }
 .featurecol {
   //overflow: hidden;
