--- a/mainsite/static/jpt/css/mainstyle.css
+++ b/mainsite/static/jpt/css/mainstyle.css
@@ -746,7 +746,7 @@ a {
   padding: 0; }
 
 .editorialcol {
-  padding: 10px; }
+  padding: 0 10px 10px 10px; }
 
 .areaContent {
   padding-right: 15px;
